<resources>
    <string name="app_name">VO2</string>
    <string name="valores_de_referencia">VALORES DE REFERENCIA</string>
    <string name="protocolo_de_bruce">Protocolo de Bruce</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="minutos">Minutos:</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="segundos">Segundos:</string>
    <string name="calcular">Calcular</string>
    <string name="resutado">Resutado</string>
    <string name="versi_n">Versión</string>
    <string name="valores_de_">Valores de referencia</string>
    <string name="acerca_de">Acerca de…</string>
    <string name="mets">METs</string>
    <string name="capacidad_funcional">Capacidad Funcional</string>
    <string name="clase_funcional">Clase Funcional</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>